--- a/src/sass/blocks/_nav.sass
+++ b/src/sass/blocks/_nav.sass
@@ -8,3 +8,7 @@
     &__triangle
         width: 250px
         align-self: flex-start
+    &_active
+        right: 0 !important
+        transition: all .4s ease
+        opacity: 1 !important
