--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -31,5 +31,6 @@ body
 @import 'blocks/button'
 @import 'blocks/main'
 @import 'blocks/section'
+@import 'blocks/toggle'
 
 @import 'media' //needed to make page responsible, little edits
