--- a/src/sass/blocks/_contacts.sass
+++ b/src/sass/blocks/_contacts.sass
@@ -12,3 +12,9 @@
     a
         color: #000
         text-decoration: none
+.nav .contacts
+    align-items: center
+    display: none
+    color: #fff
+    a
+        color: #fff
