main page english version + switch language button added

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -32,5 +32,6 @@ body
 @import 'blocks/main'
 @import 'blocks/section'
 @import 'blocks/toggle'
+@import 'blocks/lang-label'
 
 @import 'media' //needed to make page responsible, little edits
