--- a/src/sass/blocks/_button.sass
+++ b/src/sass/blocks/_button.sass
@@ -8,5 +8,6 @@
         width: 120px
         height: 50px
         padding-top: 13px 
+        text-decoration: none
     &_selected
         background-color: $main-highlight
