--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -33,5 +33,7 @@ body
 @import 'blocks/section'
 @import 'blocks/toggle'
 @import 'blocks/lang-label'
+@import 'blocks/place'
+@import 'blocks/input'
 
 @import 'media' //needed to make page responsible, little edits
