--- a/src/sass/blocks/_button.sass
+++ b/src/sass/blocks/_button.sass
@@ -11,3 +11,10 @@
         text-decoration: none
     &_selected
         background-color: $main-highlight
+    &__pay
+        height: 50px
+        width: 180px
+        border: 3px solid #fff
+        outline: none
+        border-radius: 10px
+        margin-left: 30px
