--- a/src/sass/blocks/_section.sass
+++ b/src/sass/blocks/_section.sass
@@ -10,6 +10,7 @@
         align-items: flex-start
     &__title
         margin-bottom: 65px
+        text-align: center
     &__posters
         display: flex
         flex-direction: row
@@ -53,3 +54,52 @@
         background-image: url('../img/posters/poster3.png')
     #poster4
         background-image: url('../img/posters/poster4.png')
+    
+    &__subtitle
+        margin-bottom: 30px
+        text-align: center
+    &__hall
+        width: 100%
+        height: 50vw
+        max-width: 700px
+        max-height: 500px
+        display: flex
+        flex-direction: column
+        justify-content: space-around
+        align-items: stretch
+        background-color: #00fff2
+        border: 2px solid #fff
+        border-top: 7px solid $main 
+        border-radius: 10px
+        & > div
+            display: flex
+            flex-direction: row
+            justify-content: space-around
+            align-items: center
+    &__pay-info
+        display: flex
+        flex-direction: column
+        justify-content: flex-start
+        align-items: flex-start
+        margin-bottom: 60px
+    &__pay-line
+        display: flex
+        flex-direction: row
+        justify-content: center
+        align-items: center
+        margin-bottom: 5px
+        &:first-child
+            margin-bottom: 70px
+        span
+            display: inline-block
+            width: 90px
+            text-align: right
+            margin-right: 10px
+    &.section_tickets
+        width: 50vw
+        .section__title
+            margin-bottom: 7px
+    &.section_pay
+        margin-left: 20px
+        .section__title
+            margin-top: 35px
