--- a/src/sass/blocks/_input.sass
+++ b/src/sass/blocks/_input.sass
@@ -5,6 +5,18 @@
     background-color: rgb(220, 220, 220)
     color: #000
     border-radius: 10px
+    &__search
+        width: 350px
+        text-align: center
+        &-wrapper
+            position: relative
+            img
+                width: 25px
+                height: 25px
+                position: absolute
+                top: 50%
+                right: 15px
+                transform: translateY(-50%)
     &:focus
         border: 3px solid #fff
         outline: none
