--- a/src/sass/blocks/_section.sass
+++ b/src/sass/blocks/_section.sass
@@ -103,3 +103,24 @@
         margin-left: 20px
         .section__title
             margin-top: 35px
+    &__films
+        width: 100%
+        display: flex
+        flex-direction: row
+        justify-content: space-around
+        align-items: stretch
+        flex-wrap: wrap
+        margin-top: 60px
+        & > a
+            display: block
+            width: 200px
+            height: 300px
+            background-position: center
+            background-size: cover
+            background-repeat: no-repeat
+            border-radius: 10px
+            margin: 0 5px 15px
+    &.section_search
+        width: 100%
+        .section__title
+            margin-bottom: 35px
