info page: done

--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -92,6 +92,8 @@
             margin-bottom: 20px
         &__pay-info
             margin-bottom: 30px
+        &_info + .section_info
+            margin: 20px 0 0 !important 
     .main
         padding-bottom: 70px
     .button
