--- a/src/sass/blocks/_section.sass
+++ b/src/sass/blocks/_section.sass
@@ -124,3 +124,5 @@
         width: 100%
         .section__title
             margin-bottom: 35px
+    &_info + .section_info
+        margin-left: 30px
