--- a/src/sass/blocks/_main.sass
+++ b/src/sass/blocks/_main.sass
@@ -1,4 +1,15 @@
 .main
-    padding: 80px 0 120px
+    padding: 65px 0 90px
     background-color: $bg
     z-index: -10
+    &__title
+        font-style: italic
+        font-weight: bold
+        text-align: center
+        margin-bottom: 35px
+    &__desc
+        display: block
+        margin-top: 40px
+        font-style: italic
+        text-align: center
+        color: #000
