--- a/src/sass/blocks/_section.sass
+++ b/src/sass/blocks/_section.sass
@@ -99,6 +99,15 @@
             width: 90px
             text-align: right
             margin-right: 10px
+    &__pay-place,
+    &__pay-row,
+    &__pay-price
+        display: flex
+        flex-direction: row
+        justify-content: flex-start
+        align-items: center
+    &__price
+        margin-right: 5px
     &.section_tickets
         width: 50vw
         .section__title
