--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -30,7 +30,12 @@
             justify-content: space-between
     .main
         padding: 50px 0 70px
+        &-info
+            .section__wrapper
+                justify-content: center
 @media (max-width: 768px)
+    .main-info
+        height: calc(100vh - 100px)
     .contacts,
     .dropdown
         display: none
