--- a/src/sass/blocks/_main.sass
+++ b/src/sass/blocks/_main.sass
@@ -13,3 +13,6 @@
         font-style: italic
         text-align: center
         color: #000
+    &-info
+        height: calc(100vh - 185px)
+        box-sizing: border-box
